<resources>
    <string name="app_name">Eventure</string>
    <string name="username">[USERNAME]\'s Profile</string>
    <string name="back_button">Back</string>
    <string name="name_prompt_text">Name:</string>
    <string name="placeholder_text">PlaceholderText</string>
    <string name="edit_button_text">Edit</string>
    <string name="email_prompt_text">Email:</string>
    <string name="phone_prompt_text">Phone Number:</string>
    <string name="show_profile_history_button_text">Show Profile History</string>
    <string name="delete_account_button_text">Delete Account</string>
    <string name="register_account_header_text"><u>Register New Account</u></string>
    <string name="device_identity_info">Users will be identified by their device, NOT by username and password</string>
    <string name="events_screen_text"><u>Events</u></string>
    <string name="events_screen_filter_button">Filter</string>
    <string name="add_event_button">Add Event</string>
    <string name="navigation_bar_button">Navigation Bar</string>
    <string name="back_button_text">Back</string>
    <string name="event_detail_screen_name_text">Event Name</string>
    <string name="my_events_button_text">My Organized Events</string>
    <string name="my_registered_events_button_text">Pending Event Invites</string>
    <string name="lottery_guideline_title"><u>Lottery Section Guidelines:</u></string>
    <string name="lorem_ipsum_numbered">
1. Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.\n\n2. Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.\n\n3. Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
</string>
    <string name="important">*</string>
    <string name="cancel_text">CANCEL</string>
    <string name="confirm_text">CONFIRM</string>
    <string name="event_detail_image_text">An image of the event</string>
    <string name="event_tags_text">Tags</string>
    <string name="bottom_menu_profile_text">Profile</string>
    <string name="bottom_menu_event_text">Event</string>
    <string name="bottom_menu_notifications_text">Notifications</string>
    <string name="bottom_menu_settings_text">Settings</string>
    <string name="register_button_text">Register</string>
    <string name="profile_history_button_text">Show Profile History</string>
    <string name="delete_profile_button_text">Delete Account</string>
    <string name="entrant_lists_text">Entrant Lists</string>
    <string name="view_all_entrants_text">View All Entrants</string>
    <string name="all_chosen_entrants_text">All Chosen Entrants</string>
    <string name="all_waiting_entrants_text">All Waiting Entrants</string>
    <string name="all_cancelled_entrants_text">All Cancelled Entrants</string>
    <string name="final_list_of_entrants_text">Final List of Entrants</string>
    <string name="event_details_title_text">Event Details</string>
    <string name="join_waitlist_text">Join Waitlist</string>
    <string name="leave_waitlist_text">Leave Waitlist</string>
    <string name="print_list_text">Print List</string>
    <string name="notify_selectees_button">Notify selectees to sign up</string>
    <string name="create_or_edit_event_text">Create/Edit Event</string>
    <string name="event_description_text">Event Description</string>
    <string name="tags_separated_by_commas_text">Tags (separated by commas)</string>
    <string name="location_text">Location</string>
    <string name="date_time_format_text">yyyy-MM-dd HH:mm</string>
    <string name="invitation_acceptance_deadline_text">Invitation Acceptance Deadline</string>
    <string name="upload_event_poster_photo_text">Upload Event Poster Photo</string>
    <string name="upload_text">Upload</string>
    <string name="limit_waitlist_text">Limit Waitlist</string>
    <string name="enter_max_number_text">Enter max #</string>
    <string name="number_of_selected_entrants_text">Number of Selected Entrants</string>
    <string name="set_event_settings_text">Set Event Settings</string>
    <string name="enable_geolocation_text">Enable Geolocation</string>
    <string name="generate_qr_code_text">Generate QR Code</string>
    <string name="notify_selected_entrant_text">Notify entrants who won lottery to sign up</string>
    <string name="notify_selected_entrant_success_text">Notify selected entrants of successful enrollment upon sign up</string>
    <string name="notify_entrant_of_successful_waitlist_enrollment_text">Notify entrant of successful waitlist enrollment</string>
    <string name="notify_entrant_if_they_have_cancelled_text">Notify entrant if they have cancelled</string>
    <string name="done_creating_editing_event_text">Done Creating/Editing Event</string>
    <string name="refresh_notifications">Refresh Notifications</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="lottery">Lottery</string>
    <string name="admin">Admin</string>
    <string name="organizers">Organizers</string>
    <string name="delete_account_message">Deleting your account is a permanent action. Do you wish to continue?</string>
    <string name="profile_history_button">Event History</string>
    <string name="update_profile_button">Update Profile</string>
    <string name="lottery_selection_guidelines_actual_text">
    1. Upon joining the waitlist for an event, all entrants have an equal chance to be selected once registration closes.\n
    If a selected entrant declines or does not respond before the invitation deadline, another entrant may be chosen.\n\n
    2. You will receive a notification if you were selected or not.\n\n
    3. Draws are random and are not influenced by organizers or administrators.\n\n
    4. Your information will only be used for in-app event registration and communication purposes.\n\n
    5. By pressing the CONFIRM button you are agreeing to these guidelines and understand that selection is random and not guaranteed.
</string>
    <string name="organiser_notification_header_text">Entrant Notifications</string>
    <string name="waitlist_entrants_text">Waitlist Entrants</string>
    <string name="chosen_entrants_text">Chosen Entrants</string>
    <string name="cancelled_entrants_text">Cancelled Entrants</string>
    <string name="finalized_entrants_text">Finalized Entrants</string>
    <string name="notification_message_header_text">Notification Message:</string>
    <string name="send_notification_button_text">Send Notification</string>
    <string name="settings_text"><u>Settings</u></string>
    <string name="entrantLocation">Location:</string>
    <string name="decline_invite">DECLINE Invite</string>
    <string name="pending_entrant_decline_text_1">This action will <i>DECLINE</i> the user’s invitation and <i>cannot be undone</i>.</string>
    <string name="pending_entrant_decline_text_2">Do you wish to continue?</string>
    <string name="edit_event_title_text">Edit Event</string>
    <string name="create_event_title_text">Create Event</string>
    <string name="done_editing_event_text">Done Editing Event</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="notification_logs_text">Notification Logs</string>
    <string name="browse_profiles">All Profiles</string>
    <string name="browse_images">Browse Images</string>
    <string name="notification_title_text">Notification Title</string>
    <string name="confirm_remove_action">CONFIRM REMOVE</string>
    <string name="dialog_remove_event_text">You are about to <em>PERMANENTLY REMOVE</em> the user’s created event. This action is <em>IRREVERSIBLE</em>!</string>
    <string name="dialog_remove_image_text">You are about to <em>PERMANENTLY REMOVE</em> the image uploaded by the user for this event. This action is <em>IRREVERSIBLE</em>!</string>
    <string name="dialog_remove_organizer_text">
        You are about to <em>PERMANENTLY REMOVE</em> this organizer from <em>ALL</em> events they have created.\n
        This action will also <em>PERMANENTLY DELETE</em> their profile from the app.\n\n
        These action are <em>IRREVERSIBLE</em>!</string>
    <string name="notification_logs_header_text">Notification Logs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_event_posters_user_text">All Users that Uploaded Posters</string>
    <string name="event_poster_content_description">Event Poster</string>
    <string name="delete_poster_content_description">Delete Poster</string>
</resources>