<!-- Main Layout -->
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="40dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".FirstTimeUserInfoFragment">

    <!-- Title (Register New Account) -->
    <TextView
        android:id="@+id/register_account_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_account_header_text"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp" />

    <!-- Enter Name -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_prompt_text"
        android:textStyle="bold"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/app_beige"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:drawableStart="@drawable/edit_icon"
        android:layout_marginBottom="14dp" />

    <!-- Enter Email -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_prompt_text"
        android:textStyle="bold"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/app_beige"
        android:inputType="textEmailAddress"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:drawableStart="@drawable/edit_icon"
        android:layout_marginBottom="14dp" />


    <!-- (OPTIONAL) Enter Phone -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_prompt_text"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/phone_edit_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/app_beige"
        android:hint="Optional"
        android:inputType="phone"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:drawableStart="@drawable/edit_icon"
        android:layout_marginBottom="16dp" />

    <!-- Device Identity note -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_identity_info"
        android:textSize="16sp"
        android:textStyle="bold" />

    <!-- Spacer pushes the buttons to the bottom -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <!-- Cancel & Confirm Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="24dp">

        <Button
            android:id="@+id/register_cancel_button"
            android:layout_width="135dp"
            android:layout_height="50dp"
            android:text="@string/cancel_text"
            android:textStyle="bold"
            android:backgroundTint="@color/red"
            android:textColor="@color/black"
            android:layout_marginEnd="30dp" />

        <Button
            android:id="@+id/register_confirm_button"
            android:layout_width="135dp"
            android:layout_height="50dp"
            android:text="@string/confirm_text"
            android:textStyle="bold"
            android:backgroundTint="@color/green"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>