<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:padding="40dp"
    tools:context=".LotteryGuidelinesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Title (includes red asterisk & Lottery Guideline title) -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/asterisk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/important"
                android:textColor="@color/important_field"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lotteryGuidelineTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lottery_guideline_title"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Scrollable text box -->
        <TextView
            android:id="@+id/scrollableText"
            android:layout_width="match_parent"
            android:layout_height="475dp"
            android:background="@drawable/rounded_list_item"
            android:lineSpacingExtra="4dp"
            android:padding="24dp"
            android:scrollbars="vertical"
            android:text="@string/lottery_selection_guidelines_actual_text"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <!-- Cancel & Confirm Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/register_cancel_button"
                android:layout_width="135dp"
                android:layout_height="50dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/red"
                android:text="@string/cancel_text"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <Button
                android:id="@+id/register_confirm_button"
                android:layout_width="135dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/green"
                android:text="@string/confirm_text"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
