<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="32dp"
    android:paddingBottom="56dp"
    android:paddingStart="32dp"
    android:paddingEnd="32dp"
    android:background="@drawable/popup_background">

    <!-- Title -->
    <TextView
        android:id="@+id/dialogUserNameTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingTop="12dp"
        android:gravity="center"
        android:text="Pending Entrant"
        android:textStyle="bold"
        android:textSize="24sp" />

    <!-- User's name -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialogUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/name_prompt_text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/enterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="John Doe"
            android:textSize="18sp" />

    </LinearLayout>

    <!-- User's Email -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialogUserEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/email_prompt_text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/enterEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:autoLink="email"
            android:text="johndoe@hotmail.com"
            android:textSize="18sp" />

    </LinearLayout>

    <!-- User's Phone Number -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialogUserPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/phone_prompt_text" />

        <TextView
            android:id="@+id/enterPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:autoLink="phone"
            android:text="780-123-4567"
            android:textSize="18sp" />

    </LinearLayout>

    <!-- User's EntrantLocation -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialogUserLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/entrantLocation" />

        <TextView
            android:id="@+id/enterLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="Edmonton, AB"
            android:textSize="18sp" />

    </LinearLayout>

    <!-- Buttons -->
    <Button
        android:id="@+id/dialogDeclineButton"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/important_field"
        android:text="@string/decline_invite" />

    <Button
        android:id="@+id/dialogBackButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/app_grey"
        android:text="@string/back_button_text" />

</LinearLayout>
